Fixes text input when $.dropDown is open having the wrong height.

--- a/tool-ui/src/main/webapp/style/views.less
+++ b/tool-ui/src/main/webapp/style/views.less
@@ -1091,7 +1091,7 @@ table.links.table-striped {
     height: auto;
     line-height: inherit;
     margin: 0;
-    min-height: auto;
+    min-height: 0;
     padding: 0;
     position: static;
     width: auto;
